plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '2.0'

description = 'OpenCADC VOSpace test library'
def git_url = 'https://github.com/opencadc/vos'

dependencies {
    implementation 'org.opencadc:cadc-util:[1.6,2.0)'
    implementation 'org.opencadc:cadc-vos:[2.0,)'
    implementation 'org.opencadc:cadc-uws:[1.0,2.0)'
    implementation 'org.opencadc:cadc-registry:[1.5.15,2.0)'

    implementation 'junit:junit:[4.0,)'
}
